# go2_ws

./: .gitignore  README.md
src/: Champ integration readme ·md  Champ_integration_readme.md
src/champ_base/: CMakeLists.txt
src/champ_base/launch/: champ_base.launch.py
src/champ_base/src/: message_relay.cpp  quadruped_controller.cpp  state_estimation.cpp
src/go2_bringup/: CMakeLists.txt  package.xml
src/go2_bringup/config/: gazebo_bridge.yaml
src/go2_bringup/launch/: go2_gazebo.launch.xml  originall_gazebo.launch.txt
src/go2_bringup/worlds/: warehouse.world
src/go2_description/: CMakeLists.txt  package.xml
src/go2_description/config/: controllers.yaml  gait.yaml
src/go2_description/launch/: display.launch.py  display.launch.xml
src/go2_description/rviz/: go2_config.rviz
src/go2_description/xacro/: gazebo.xacro  go2_description.xacro  leg.xacro  robot.xacro
